percobaan banner ketiga

--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ a {
 
 
 .home_banner_area {
-  background: url(../img/banner/bannera.jpg) no-repeat center bottom;
+  background: url(../img/banner/banner.jpg) no-repeat center bottom;
   position: relative;
   z-index: 1;
   min-height: 900px; }
