mengubah warna menu mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -87,7 +87,7 @@
 		display: block;
 		width: 25px;
 		height: 3px;
-		background: #1641ff;
+		background: #e7222a;
 		margin: auto;
 		margin-bottom: 4px;
 		transition: all 400ms linear;
